localization/v2.4.x/site/fr/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: >-
  Cette page fournit une liste de tutoriels vous permettant d'interagir avec
  Milvus.
title: Vue d'ensemble des didacticiels
---
<h1 id="Tutorials-Overview" class="common-anchor-header">Vue d'ensemble des didacticiels<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Cette page fournit une liste de tutoriels vous permettant d'interagir avec Milvus.</p>
<table>
<thead>
<tr><th>Tutoriel</th><th>Cas d'utilisation</th><th>Fonctionnalités connexes de Milvus</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/fr/v2.4.x/build-rag-with-milvus.md">Construire RAG avec Milvus</a></td><td>RAG</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/how_to_enhance_your_rag.md">RAG avancé</a></td><td>RAG</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/full_text_search_with_milvus.md">Recherche en texte intégral avec Milvus</a></td><td>Démarrage rapide</td><td>Recherche en texte intégral</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/hybrid_search_with_milvus.md">Recherche hybride avec Milvus</a></td><td>Recherche hybride</td><td>recherche hybride, multi vectorielle, intégration dense, intégration clairsemée</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/image_similarity_search.md">Recherche d'images avec Milvus</a></td><td>Recherche sémantique</td><td>recherche vectorielle, champ dynamique</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/multimodal_rag_with_milvus.md">RAG multimodal avec Milvus</a></td><td>RAG</td><td>Recherche vectorielle, champ dynamique</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/multimodal_rag_with_milvus.md">Recherche multimodale utilisant des vecteurs multiples</a></td><td>Recherche sémantique</td><td>multi vectorielle, recherche hybride</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/graph_rag_with_milvus.md">Graph RAG avec Milvus</a></td><td>RAG</td><td>recherche par graphe</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/contextual_retrieval_with_milvus.md">Recherche contextuelle avec Milvus</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/hdbscan_clustering_with_milvus.md">HDBSCAN Clustering avec Milvus</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/use_ColPali_with_milvus.md">Utiliser ColPali pour la recherche multimodale avec Milvus</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/vector_visualization.md">Visualisation vectorielle</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/movie_recommendation_with_milvus.md">Recommandation de films avec Milvus</a></td><td>Système de recommandation</td><td>Recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/funnel_search_with_matryoshka.md">Recherche en entonnoir avec Matryoshka Embeddings</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/question_answering_system.md">Système de réponse aux questions</a></td><td>Réponse aux questions</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/recommendation_system.md">Système de recommandation</a></td><td>Système de recommandation</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/video_similarity_search.md">Recherche de similarité vidéo</a></td><td>Recherche sémantique</td><td>Recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/audio_similarity_search.md">Recherche de similarité audio</a></td><td>Recherche sémantique</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/dna_sequence_classification.md">Classification de l'ADN</a></td><td>Classification</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/text_search_engine.md">Moteur de recherche textuelle</a></td><td>Recherche sémantique</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/text_image_search.md">Recherche d'images par texte</a></td><td>Recherche sémantique</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/v2.4.x/image_deduplication_system.md">Déduplication d'images</a></td><td>Déduplication</td><td>recherche vectorielle</td></tr>
</tbody>
</table>
