localization/v2.6.x/site/fr/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: >-
  Cette page fournit une liste de tutoriels vous permettant d'interagir avec
  Milvus.
title: Vue d'ensemble des didacticiels
---
<h1 id="Tutorials-Overview" class="common-anchor-header">Vue d'ensemble des didacticiels<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Cette page fournit une liste de tutoriels vous permettant d'interagir avec Milvus.</p>
<table>
<thead>
<tr><th>Tutoriel</th><th>Cas d'utilisation</th><th>Fonctionnalités connexes de Milvus</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/fr/build-rag-with-milvus.md">Construire RAG avec Milvus</a></td><td>RAG</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/how_to_enhance_your_rag.md">RAG avancé</a></td><td>RAG</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/full_text_search_with_milvus.md">Recherche en texte intégral avec Milvus</a></td><td>Démarrage rapide</td><td>Recherche en texte intégral</td></tr>
<tr><td><a href="/docs/fr/hybrid_search_with_milvus.md">Recherche hybride avec Milvus</a></td><td>Recherche hybride</td><td>recherche hybride, multi vectorielle, intégration dense, intégration clairsemée</td></tr>
<tr><td><a href="/docs/fr/image_similarity_search.md">Recherche d'images avec Milvus</a></td><td>Recherche sémantique</td><td>recherche vectorielle, champ dynamique</td></tr>
<tr><td><a href="/docs/fr/multimodal_rag_with_milvus.md">RAG multimodal avec Milvus</a></td><td>RAG</td><td>Recherche vectorielle, champ dynamique</td></tr>
<tr><td><a href="/docs/fr/multimodal_rag_with_milvus.md">Recherche multimodale utilisant des vecteurs multiples</a></td><td>Recherche sémantique</td><td>multi vectorielle, recherche hybride</td></tr>
<tr><td><a href="/docs/fr/graph_rag_with_milvus.md">Graph RAG avec Milvus</a></td><td>RAG</td><td>recherche par graphe</td></tr>
<tr><td><a href="/docs/fr/contextual_retrieval_with_milvus.md">Recherche contextuelle avec Milvus</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/hdbscan_clustering_with_milvus.md">HDBSCAN Clustering avec Milvus</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/use_ColPali_with_milvus.md">Utiliser ColPali pour la recherche multimodale avec Milvus</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/quickstart_with_attu.md">Démarrage rapide avec Attu</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/use-async-milvus-client-with-asyncio.md">Utiliser AsyncMilvusClient avec asyncio</a></td><td>AsyncIO</td><td>AsyncIO, recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/text_image_search.md">Recherche texte-image avec Milvus</a></td><td>Recherche sémantique</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/vector_visualization.md">Visualisation vectorielle</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/movie_recommendation_with_milvus.md">Recommandation de films avec Milvus</a></td><td>Système de recommandation</td><td>Recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/funnel_search_with_matryoshka.md">Recherche en entonnoir avec Matryoshka Embeddings</a></td><td>Démarrage rapide</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/question_answering_system.md">Système de réponse aux questions</a></td><td>Réponse aux questions</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/recommendation_system.md">Système de recommandation</a></td><td>Système de recommandation</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/video_similarity_search.md">Recherche de similarité vidéo</a></td><td>Recherche sémantique</td><td>Recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/audio_similarity_search.md">Recherche de similarité audio</a></td><td>Recherche sémantique</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/dna_sequence_classification.md">Classification de l'ADN</a></td><td>Classification</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/text_search_engine.md">Moteur de recherche textuelle</a></td><td>Recherche sémantique</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/image_deduplication_system.md">Déduplication d'images</a></td><td>Déduplication</td><td>recherche vectorielle</td></tr>
<tr><td><a href="/docs/fr/generating_milvus_query_filter_expressions.md">Génération d'expressions de filtre de requête Milvus avec de grands modèles de langage</a></td><td>Filtrage des métadonnées</td><td>recherche vectorielle</td></tr>
</tbody>
</table>
